--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
       <button class="paper">Paper</button>
       <button class="scissors">Scissors</button>
     </div>
+    <div class="choices">
+      <div class="player-choice">
+        <label for="">Player:</label>
+        <span id="pchoice"></span>
+      </div>
+      <div class="computer-choice">
+        <label for="cchoice">Computer:</label>
+        <span id="cchoice"></span>
+      </div>
+    </div>
+    <div class="message">Press a button</div>
     <script src="index.js"></script>
   </body>
 </html>
