--- a/index.html
+++ b/index.html
@@ -25,39 +25,53 @@
       <div class="section choices-section">
         <h2>Choices</h2>
         <hr />
-        <div class="choices">
-          <div class="player-choice">
-            <label for="">Player:</label>
-            <span id="pchoice"></span>
-          </div>
-          <div class="computer-choice">
-            <label for="cchoice">Computer:</label>
-            <span id="cchoice"></span>
-          </div>
-        </div>
+        <table>
+          <thead>
+            <tr>
+              <th>Player</th>
+              <th>Computer</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td id="pchoice">None</td>
+              <td id="cchoice">None</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
       <div class="section message-section">
-        <h2>Result</h2>
+        <h2>Message</h2>
         <hr />
         <p class="message">Press a button</p>
       </div>
     </div>
-    <div class="section wins-section">
-      <h2>Wins</h2>
+    <div class="section scores-section">
+      <h2>Scores</h2>
       <hr />
       <div class="wins">
-        <div class="player-wins">
-          <label for="pwin">Player:</label>
-          <span id="pwin">0</span>
-        </div>
-        <div class="computer-wins">
-          <label for="cwin">Computer:</label>
-          <span id="cwin">0</span>
-        </div>
-        <div class="ties">
-          <label for="ties">Ties:</label>
-          <span id="ties">0</span>
-        </div>
+        <table class="results-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Player</th>
+              <th>Computer</th>
+              <th>Ties</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>#</th>
+              <td id="pwin">0</td>
+              <td id="cwin">0</td>
+              <td id="ties">0</td>
+            </tr>
+            <tr>
+              <th>Total</th>
+              <td colspan="3" id="total">0</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
     <script src="index.js"></script>
